# hfsprescue

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
debian/: changelog  control  copyright  docs  manpage.1  manpages  rules
debian/patches/: change-usr-local-by-usr.patch  series
doc/: Makefile.am  Makefile.in
doc/de/: Makefile.am  Makefile.in  hfsprescue.html  hfsprescue.txt  lynx.sh
doc/en/: Makefile.am  Makefile.in  hfsprescue.html  hfsprescue.txt  lynx.sh
man/: Makefile.am  Makefile.in  hfsprescue.1
src/: Makefile.am  Makefile.in  apple.h  bytescan.cpp  bytescan.h  decompress.cpp  decompress.h  eof.cpp  eof.h  freebsd.h  help.cpp  help.h  hfsprescue.cpp  hfsprescue.h  ioctl.cpp  ioctl.h  log.cpp  log.h  rmdir.cpp  rmdir.h  tools.cpp  tools.h  utf8mac.cpp  utf8mac.h  vh.cpp  vh.h
